removed use of sun's base 64 encoder